layouting hero, about, dangle section

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,151 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="/dist/output.css" rel="stylesheet">
-</head>
-<body>
-  <h1 class="text-3xl font-bold underline">
-    Hello bytesfest!
-  </h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="/dist/output.css" rel="stylesheet" />
+  </head>
+  <body class="font-poppins bg-slate-800 text-white transition-all">
+    <!-- HERO SECTION START -->
+
+    <!-- navigation-start -->
+    <nav
+      class="w-full left-0 fixed z-50 h-20 sm:h-24 lg:h-28 bg-green-200 text-slate-600"
+    >
+      <!-- container -->
+      <div class="h-full px-5 lg:px-0 lg:w-[1200px] mx-auto">
+        <div class="w-ful h-full flex justify-between bg-red-200">
+          <div class="lg:basis-3/12 h-full flex items-center bg-green-100">
+            <img src="" alt="" class="" />
+            <h1 class="font-semibold text-sm sm:text-lg lg:text-2xl">
+              Bytesfest 2022
+            </h1>
+          </div>
+          <div class="lg:basis-4/12 h-full flex items-center bg-yellow-100">
+            <!-- hamburger-menu -->
+            <div class="lg:hidden w-10 h-10 bg-slate-500"></div>
+            <ul
+              class="w-full h-full hidden lg:flex items-center justify-around bg-green-100"
+            >
+              <li class=""><a href="" class="">Home</a></li>
+              <li class=""><a href="" class="">Home</a></li>
+              <li class=""><a href="" class="">Home</a></li>
+              <li class=""><a href="" class="">Home</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <!-- navigation-end -->
+
+    <div class="w-full h-[100vh] bg-slate-700">
+      <!-- container -->
+      <div class="h-full px-5 lg:px-0 lg:w-[1200px] mx-auto bg-slate-800">
+        <div class="relative w-full h-full flex flex-col justify-center">
+          <div class="w-full text-white text-center">
+            <h3
+              class="text-2xl sm:text-3xl md:text-4xl lg:text-5xl font-semibold"
+            >
+              BUNCH OF YOUTH TECHNOTRACTION
+            </h3>
+            <h3
+              class="text-2xl sm:text-3xl md:text-4xl lg:text-5xl font-semibold mb-3 md:mb-6"
+            >
+              AND SPORT FESTIVAL
+            </h3>
+            <p class="text-lg sm:text-xl md:text-xl mb-5 md:mb-9">
+              Aksi dan Kreasi Muda Indonesia
+            </p>
+            <!-- call-to-action  -->
+            <button
+              class="px-10 md:px-16 py-3 md:py-4 bg-slate-300 text-slate-600"
+            >
+              Daftar
+            </button>
+          </div>
+          <div
+            class="absolute w-[280px] sm:w-[480px] md:w-[520px] h-16 sm:h-20 lg:w-[80%] lg:h-28 mx-auto bottom-0 lg:bottom-24 left-1/2 -translate-x-1/2 bg-green-100"
+          ></div>
+        </div>
+      </div>
+    </div>
+    <!-- HERO SECTION END -->
+
+    <!-- ABOUT SECTION START -->
+    <div class="py-32 bg-slate-500">
+      <!-- container -->
+      <div class="px-5 lg:px-0 lg:w-[1200px] mx-auto">
+        <div class="w-full bg-slate-400 flex flex-col lg:flex-row">
+          <div class="lg:basis-5/12 flex justify-center mb-8 lg:mb-0">
+            <!-- bytesfest-logo -->
+            <div
+              class="w-32 h-40 sm:w-44 sm:h-52 md:w-52 md:h-64 lg:w-72 lg:h-96 bg-slate-600"
+            ></div>
+          </div>
+
+          <div class="lg:basis-7/12 lg:flex lg:items-center">
+            <div class="bg-slate-600">
+              <h3
+                class="font-semibold text-xl sm:text-2xl md:text-3xl lg:text-4xl mb-5"
+              >
+                Bytesfest (Bunch of Youth Technottraction and Sport Festival)
+              </h3>
+              <p class="mb-5 sm:text-lg">
+                Bytesfest merupakan event tahunan yang diselenggarakan oleh
+                himpunan Mahasiswa Prodi Pendidikan Teknik Informatika dan
+                Komputer Universitas Sebelas Maret. Bytesfest tahun 2022 yang
+                mengusung tema Akrisma (“Aksi dan Kreasi Muda Indonesia” ).
+              </p>
+              <p class="sm:text-lg">
+                Diharapkan dengan diselenggarakan acara ini dapat mengajak
+                generasi muda mengembangkan potensi, minat bakat dan ajang
+                kreatifitas yang mampu membentuk karakter yang berjiwa muda dan
+                mampu mengembangkan potensi kreativitas dan inovasi melalui
+                apapun yang mereka punya.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- ABOUT SECTION END -->
+
+    <!-- DANGLE SECTION START -->
+    <div class="py-32 bg-slate-700">
+      <!-- container -->
+      <div class="px-5 lg:px-0 lg:w-[1200px] mx-auto">
+        <div class="w-full bg-slate-400 flex flex-col lg:flex-row-reverse">
+          <div class="lg:basis-5/12 flex justify-center mb-8 lg:mb-0">
+            <!-- bytesfest-logo -->
+            <div
+              class="w-32 h-40 sm:w-44 sm:h-52 md:w-52 md:h-64 lg:w-72 lg:h-96 bg-slate-600"
+            ></div>
+          </div>
+
+          <div class="lg:basis-7/12 lg:flex lg:items-center">
+            <div class="bg-slate-600">
+              <h3
+                class="font-semibold text-xl sm:text-2xl md:text-3xl lg:text-4xl mb-5"
+              >
+                Dangle
+              </h3>
+              <h2 class="font-medium sm:text-xl md:text-2xl mb-5">
+                Filosofi Atribut
+              </h2>
+              <p class="mb-5 sm:text-lg">
+                Mahkota Dangle melambangkan kejayaan dan kemakmuran dari acara
+                Bytesfest yang rutin diadakan setiap tahunnya, kacamatanya
+                membuat bytesfest terkesan modern karena mengikuti perkembangan
+                peradaban yang serba modern tanpa meninggalkan keahlian yang
+                ditempatkan dengan tepat. Baju saman Dangle memberi makna seni
+                yang melekat dan melestarikan jiwa seni. Truntum mampu untuk
+                tumbuh dan berkembang mengikuti perubahan seni dan teknologi.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- DANGLE SECTION END -->
+  </body>
 </html>
