--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
             <h1
               class="font-semibold text-sm sm:text-lg lg:text-2xl tracking-wider text-shadow-hero-md"
             >
+              <img src="/assets/img/logo-mini.png" alt="" class="" />
               Bytesfest 2022
             </h1>
           </div>
