--- a/src/index.html
+++ b/src/index.html
@@ -6,30 +6,47 @@
     <link href="/dist/output.css" rel="stylesheet" />
     <style></style>
   </head>
-  <body class="font-poppins bg-slate-800 text-white transition-all">
+  <body class="bg-slate-800 font-poppins text-white transition-all">
     <!-- HERO SECTION START -->
 
     <!-- navigation-start -->
-    <nav
-      class="navigation w-full left-0 fixed z-50 h-20 sm:h-24 lg:h-28 text-white"
-    >
+    <nav class="navigation absolute left-0 h-20 w-full text-white sm:h-24">
       <!-- container -->
-      <div class="h-full px-5 lg:px-0 lg:w-[1200px] mx-auto">
-        <div class="w-ful h-full flex justify-between">
-          <div class="lg:basis-3/12 h-full flex items-center">
-            <img src="" alt="" class="" />
+      <div
+        class="navigation-container mx-auto h-full px-5 lg:w-[1200px] lg:px-0"
+      >
+        <div class="w-ful flex h-full justify-between">
+          <div class="flex h-full items-center gap-x-1 lg:basis-3/12">
+            <img
+              src="/assets/img/logo-mini.png"
+              alt="bytesfest logo"
+              class="h-14 w-auto md:h-16"
+            />
             <h1
-              class="font-semibold text-sm sm:text-lg lg:text-2xl tracking-wider text-shadow-hero-md"
+              class="text-shadow-hero-md text-sm font-semibold tracking-wider sm:text-lg lg:text-2xl"
             >
-              <img src="/assets/img/logo-mini.png" alt="" class="" />
-              Bytesfest 2022
+              Bytes<span class="text-primary-75">fest</span> 2022
             </h1>
           </div>
-          <div class="lg:basis-5/12 h-full flex items-center">
+          <div class="flex h-full items-center lg:basis-5/12">
             <!-- hamburger-menu -->
-            <div class="lg:hidden w-10 h-10 bg-slate-500"></div>
+            <button class="p-2 lg:hidden">
+              <div
+                class="m-auto flex h-6 w-6 flex-col justify-around md:h-7 md:w-7"
+              >
+                <span
+                  class="block h-[2px] w-full bg-white transition-all"
+                ></span>
+                <span
+                  class="block h-[2px] w-full bg-white transition-all"
+                ></span>
+                <span
+                  class="block h-[2px] w-full bg-white transition-all"
+                ></span>
+              </div>
+            </button>
             <ul
-              class="w-full h-full hidden lg:flex items-center justify-around font-medium text-sm tracking-wider"
+              class="hidden h-full w-full items-center justify-around text-sm font-medium tracking-wider lg:flex"
             >
               <li class=""><a href="" class="text-shadow-hero-sm">Home</a></li>
               <li class=""><a href="" class="text-shadow-hero-sm">About</a></li>
@@ -50,59 +67,81 @@
     <!-- navigation-end -->
 
     <div
-      class="w-full h-[100vh] bg-slate-900 bg-left bg-cover"
+      class="h-[100vh] w-full bg-slate-900 bg-cover bg-left"
       style="background-image: url('../assets/img/hero-img.png')"
     >
       <!-- container -->
-      <div class="h-full px-5 lg:px-0 lg:w-[1200px] mx-auto">
-        <div class="relative w-full h-full flex flex-col justify-center">
-          <div class="w-full text-white text-center">
+      <div class="mx-auto h-full px-5 lg:w-[1200px] lg:px-0">
+        <div class="relative flex h-full w-full flex-col justify-center">
+          <div class="w-full text-center text-white">
             <h3
-              class="text-2xl sm:text-3xl md:text-4xl lg:text-5xl font-semibold text-shadow-hero-lg"
+              class="text-shadow-hero-lg text-2xl font-semibold sm:text-3xl md:mb-1 md:text-4xl lg:mb-2 lg:text-5xl"
             >
               BUNCH OF YOUTH TECHNOTRACTION
             </h3>
             <h3
-              class="text-2xl sm:text-3xl md:text-4xl lg:text-5xl font-semibold mb-3 md:mb-6 text-shadow-hero-lg"
+              class="text-shadow-hero-lg mb-3 text-2xl font-semibold sm:text-3xl md:mb-6 md:text-4xl lg:text-5xl"
             >
               AND SPORT FESTIVAL
             </h3>
             <p
-              class="text-lg sm:text-xl md:text-xl mb-5 md:mb-9 text-shadow-hero-lg"
+              class="text-shadow-hero-lg mb-5 text-base text-primary-25 sm:text-lg md:mb-9 md:text-lg lg:text-xl"
             >
               Aksi dan Kreasi Muda Indonesia
             </p>
             <!-- call-to-action  -->
             <button
-              class="px-10 md:px-16 py-3 md:py-4 bg-slate-300 text-slate-600"
+              class="rounded-sm bg-primary-0 px-10 py-3 font-semibold tracking-wide text-primary-900 md:px-16 md:py-4"
             >
               Daftar
             </button>
           </div>
           <div
-            class="absolute w-[280px] sm:w-[480px] md:w-[520px] h-16 sm:h-20 lg:w-[80%] lg:h-28 mx-auto bottom-0 lg:bottom-24 left-1/2 -translate-x-1/2 bg-green-100"
-          ></div>
+            class="absolute -bottom-6 left-1/2 mx-auto h-20 w-full -translate-x-1/2 rounded-sm border-[0.5px] border-neutral-100 bg-neutral-900 px-5 pt-3 opacity-75 sm:h-24 sm:w-[480px] md:w-[520px] lg:bottom-24 lg:h-28 lg:w-[80%] lg:px-0"
+          >
+            <div class="flex h-1/2 w-full items-center justify-around text-2xl">
+              <span class="relative"
+                ><p class="">00</p>
+                <p class="absolute text-xs">Days</p></span
+              >
+              <span class="">:</span>
+              <span class="relative"
+                ><p class="">00</p>
+                <p class="absolute text-xs">Hours</p></span
+              >
+              <span class="">:</span>
+              <span class="relative"
+                ><p class="">00</p>
+                <p class="absolute text-xs">Minutes</p></span
+              >
+              <span class="">:</span>
+              <span class="relative"
+                ><p class="">00</p>
+                <p class="absolute text-xs">Second</p></span
+              >
+            </div>
+          </div>
         </div>
       </div>
     </div>
     <!-- HERO SECTION END -->
 
     <!-- ABOUT SECTION START -->
-    <div class="py-32 bg-slate-500">
+    <div class="bg-slate-500 py-32">
       <!-- container -->
-      <div class="px-5 lg:px-0 lg:w-[1200px] mx-auto">
-        <div class="w-full bg-slate-400 flex flex-col lg:flex-row">
-          <div class="lg:basis-5/12 flex justify-center mb-8 lg:mb-0">
+      <div class="mx-auto px-5 lg:w-[1200px] lg:px-0">
+        <div class="flex w-full flex-col bg-slate-400 lg:flex-row">
+          <div class="mb-8 flex justify-center lg:mb-0 lg:basis-5/12">
             <!-- bytesfest-logo -->
             <div
-              class="w-32 h-40 sm:w-44 sm:h-52 md:w-52 md:h-64 lg:w-72 lg:h-96 bg-slate-600"
+              class="h-40 w-32 bg-slate-600 sm:h-52 sm:w-44 md:h-64 md:w-52 lg:h-96 lg:w-72"
             ></div>
           </div>
 
-          <div class="lg:basis-7/12 lg:flex lg:items-center">
+          <div class="lg:flex lg:basis-7/12 lg:items-center">
             <div class="bg-slate-600">
               <h3
-                class="font-semibold text-xl sm:text-2xl md:text-3xl lg:text-4xl mb-5"
+                class="mb-5 text-xl font-semibold sm:text-2xl md:text-3xl lg:text-4xl"
               >
                 Bytesfest (Bunch of Youth Technottraction and Sport Festival)
               </h3>
@@ -127,25 +166,25 @@
     <!-- ABOUT SECTION END -->
 
     <!-- DANGLE SECTION START -->
-    <div class="py-32 bg-slate-700">
+    <div class="bg-slate-700 py-32">
       <!-- container -->
-      <div class="px-5 lg:px-0 lg:w-[1200px] mx-auto">
-        <div class="w-full bg-slate-400 flex flex-col lg:flex-row-reverse">
-          <div class="lg:basis-5/12 flex justify-center mb-8 lg:mb-0">
+      <div class="mx-auto px-5 lg:w-[1200px] lg:px-0">
+        <div class="flex w-full flex-col bg-slate-400 lg:flex-row-reverse">
+          <div class="mb-8 flex justify-center lg:mb-0 lg:basis-5/12">
             <!-- bytesfest-logo -->
             <div
-              class="w-32 h-40 sm:w-44 sm:h-52 md:w-52 md:h-64 lg:w-72 lg:h-96 bg-slate-600"
+              class="h-40 w-32 bg-slate-600 sm:h-52 sm:w-44 md:h-64 md:w-52 lg:h-96 lg:w-72"
             ></div>
           </div>
 
-          <div class="lg:basis-7/12 lg:flex lg:items-center">
+          <div class="lg:flex lg:basis-7/12 lg:items-center">
             <div class="bg-slate-600">
               <h3
-                class="font-semibold text-xl sm:text-2xl md:text-3xl lg:text-4xl mb-5"
+                class="mb-5 text-xl font-semibold sm:text-2xl md:text-3xl lg:text-4xl"
               >
                 Dangle
               </h3>
-              <h2 class="font-medium sm:text-xl md:text-2xl mb-5">
+              <h2 class="mb-5 font-medium sm:text-xl md:text-2xl">
                 Filosofi Atribut
               </h2>
               <p class="mb-5 sm:text-lg">
@@ -165,123 +204,123 @@
     <!-- DANGLE SECTION END -->
 
     <!-- component -->
-    <div class="container bg-[#1b1b1b] mx-auto w-full h-full">
-      <div class="relative wrap overflow-hidden p-10 h-full">
+    <div class="container mx-auto h-full w-full bg-[#1b1b1b]">
+      <div class="wrap relative h-full overflow-hidden p-10">
         <div
-          class="border-2-2 absolute border-opacity-100 border-[#D9D9D9] h-full border-l-[4px]"
+          class="border-2-2 absolute h-full border-l-[4px] border-[#D9D9D9] border-opacity-100"
           style="left: 50%"
         ></div>
         <!-- right timeline -->
         <div
-          class="mb-8 flex justify-between items-center w-full right-timeline"
+          class="right-timeline mb-8 flex w-full items-center justify-between"
         >
-          <div class="order-1 w-5/12 flex justify-end">
+          <div class="order-1 flex w-5/12 justify-end">
             <h3
-              class="font-bold text-white text-lg bg-[#3F0189] shadow-xl px-6 py-4"
+              class="bg-[#3F0189] px-6 py-4 text-lg font-bold text-white shadow-xl"
             >
               28 September - 8 Oktober 2022
             </h3>
           </div>
           <div
-            class="z-20 flex items-center order-1 bg-[#3F0189] shadow-xl w-8 h-8 rounded-full"
+            class="z-20 order-1 flex h-8 w-8 items-center rounded-full bg-[#3F0189] shadow-xl"
           ></div>
-          <div class="order-1 w-5/12 flex justify-start">
-            <h3 class="font-bold text-white text-lg">
+          <div class="order-1 flex w-5/12 justify-start">
+            <h3 class="text-lg font-bold text-white">
               Registrasi Lomba Batch 1
             </h3>
           </div>
         </div>
         <div
-          class="mb-8 flex justify-between items-center w-full right-timeline"
+          class="right-timeline mb-8 flex w-full items-center justify-between"
         >
-          <div class="order-1 w-5/12 flex justify-end">
+          <div class="order-1 flex w-5/12 justify-end">
             <h3
-              class="font-bold text-white text-lg bg-[#3F0189] shadow-xl px-6 py-4"
+              class="bg-[#3F0189] px-6 py-4 text-lg font-bold text-white shadow-xl"
             >
               9 Oktober - 13 Oktober 2022
             </h3>
           </div>
           <div
-            class="z-20 flex items-center order-1 bg-[#3F0189] shadow-xl w-8 h-8 rounded-full"
+            class="z-20 order-1 flex h-8 w-8 items-center rounded-full bg-[#3F0189] shadow-xl"
           ></div>
-          <div class="order-1 w-5/12 flex justify-start">
-            <h3 class="font-bold text-white text-lg">
+          <div class="order-1 flex w-5/12 justify-start">
+            <h3 class="text-lg font-bold text-white">
               Pengumpulan Karya Batch 1
             </h3>
           </div>
         </div>
         <div
-          class="mb-8 flex justify-between items-center w-full right-timeline"
+          class="right-timeline mb-8 flex w-full items-center justify-between"
         >
-          <div class="order-1 w-5/12 flex justify-end">
+          <div class="order-1 flex w-5/12 justify-end">
             <h3
-              class="font-bold text-white text-lg bg-[#3F0189] shadow-xl px-6 py-4"
+              class="bg-[#3F0189] px-6 py-4 text-lg font-bold text-white shadow-xl"
             >
               9 Oktober - 22 Oktober 2022
             </h3>
           </div>
           <div
-            class="z-20 flex items-center order-1 bg-[#3F0189] shadow-xl w-8 h-8 rounded-full"
+            class="z-20 order-1 flex h-8 w-8 items-center rounded-full bg-[#3F0189] shadow-xl"
           ></div>
-          <div class="order-1 w-5/12 flex justify-start">
-            <h3 class="font-bold text-white text-lg">
+          <div class="order-1 flex w-5/12 justify-start">
+            <h3 class="text-lg font-bold text-white">
               Registrasi Lomba Batch 2
             </h3>
           </div>
         </div>
         <div
-          class="mb-8 flex justify-between items-center w-full right-timeline"
+          class="right-timeline mb-8 flex w-full items-center justify-between"
         >
-          <div class="order-1 w-5/12 flex justify-end">
-            <h3 class="font-bold text-white text-lg">
+          <div class="order-1 flex w-5/12 justify-end">
+            <h3 class="text-lg font-bold text-white">
               Pengumpulan Karya Batch 2
             </h3>
           </div>
           <div
-            class="z-20 flex items-center order-1 bg-[#3F0189] shadow-xl w-8 h-8 rounded-full"
+            class="z-20 order-1 flex h-8 w-8 items-center rounded-full bg-[#3F0189] shadow-xl"
           ></div>
-          <div class="order-1 w-5/12 flex justify-start">
+          <div class="order-1 flex w-5/12 justify-start">
             <h3
-              class="font-bold text-white text-lg bg-[#3F0189] shadow-xl px-6 py-4"
+              class="bg-[#3F0189] px-6 py-4 text-lg font-bold text-white shadow-xl"
             >
               23 Oktober - 2 November 2022
             </h3>
           </div>
         </div>
         <div
-          class="mb-8 flex justify-between items-center w-full right-timeline"
+          class="right-timeline mb-8 flex w-full items-center justify-between"
         >
-          <div class="order-1 w-5/12 flex justify-end">
-            <h3 class="font-bold text-white text-lg">
+          <div class="order-1 flex w-5/12 justify-end">
+            <h3 class="text-lg font-bold text-white">
               Open Registrasi Seminar
             </h3>
           </div>
 
           <div
-            class="z-20 flex items-center order-1 bg-[#3F0189] shadow-xl w-8 h-8 rounded-full"
+            class="z-20 order-1 flex h-8 w-8 items-center rounded-full bg-[#3F0189] shadow-xl"
           ></div>
-          <div class="order-1 w-5/12 flex justify-start">
+          <div class="order-1 flex w-5/12 justify-start">
             <h3
-              class="font-bold text-white text-lg bg-[#3F0189] shadow-xl px-6 py-4"
+              class="bg-[#3F0189] px-6 py-4 text-lg font-bold text-white shadow-xl"
             >
               28 Oktober - 11 November 2022
             </h3>
           </div>
         </div>
         <div
-          class="mb-8 flex justify-between items-center w-full right-timeline"
+          class="right-timeline mb-8 flex w-full items-center justify-between"
         >
-          <div class="order-1 w-5/12 flex justify-end">
-            <h3 class="font-bold text-white text-lg">
+          <div class="order-1 flex w-5/12 justify-end">
+            <h3 class="text-lg font-bold text-white">
               Seminar, Awarding, & Puncak Acara
             </h3>
           </div>
           <div
-            class="z-20 flex items-center order-1 bg-[#3F0189] shadow-xl w-8 h-8 rounded-full"
+            class="z-20 order-1 flex h-8 w-8 items-center rounded-full bg-[#3F0189] shadow-xl"
           ></div>
-          <div class="order-1 w-5/12 flex justify-start">
+          <div class="order-1 flex w-5/12 justify-start">
             <h3
-              class="font-bold text-white text-lg bg-[#3F0189] shadow-xl px-6 py-4"
+              class="bg-[#3F0189] px-6 py-4 text-lg font-bold text-white shadow-xl"
             >
               12 November 2022
             </h3>
