--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/dist/output.css" rel="stylesheet" />
-    <style></style>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
+	<style>
+		:root {
+			--swiper-pagination-bullet-inactive-color: #D9D9D9; 
+			--swiper-pagination-bullet-inactive-opacity: 0.9;
+			--swiper-pagination-color: #4D00A9;
+		}
+	</style>
   </head>
   <body class="bg-slate-800 font-poppins text-white transition-all">
     <!-- HERO SECTION START -->
@@ -203,11 +210,43 @@
     </div>
     <!-- DANGLE SECTION END -->
 
+	<!-- Slider main container -->
+	<div class="bg-[#1b1b1b]">
+		<div class="py-36 text-center">
+			<h1 href="" class="text-5xl font-semibold text-shadow-hero-sm">Bytesfest Competition 2022</h1>
+		</div>
+		<div class="swiper">
+			<div class="swiper-wrapper pb-12">
+			  <div class="swiper-slide w-8" style="width: 66.666667%;">
+				<img class="w-full" src="/assets/img/lomba-podcast.png" />
+			  </div>
+			  <div class="swiper-slide" style="width: 66.666667%;">
+				<img class="w-full" src="/assets/img/lomba-web.png" />
+			  </div>
+			  <div class="swiper-slide" style="width: 66.666667%;">
+				<img class="w-full" src="/assets/img/lomba-fotografi.png" />
+			  </div>
+			  <div class="swiper-slide" style="width: 66.666667%;">
+				<img class="w-full" src="/assets/img/lomba-essai.png" />
+			  </div>
+			  <div class="swiper-slide" style="width: 66.666667%;">
+				<img class="w-full" src="/assets/img/lomba-poster.png" />
+			  </div>
+			</div>
+			<div class="swiper-pagination"></div>
+		  </div>
+
+		
+	</div>
+
     <!-- component -->
-    <div class="container mx-auto h-full w-full bg-[#1b1b1b]">
+    <div class="mx-auto h-full w-full bg-[#1b1b1b]">
+		<div class="pt-36 pb-12 text-center">
+			<h1 href="" class="text-5xl font-semibold text-shadow-hero-sm">Timeline Bytesfest</h1>
+		</div>
       <div class="wrap relative h-full overflow-hidden p-10">
         <div
-          class="border-2-2 absolute h-full border-l-[4px] border-[#D9D9D9] border-opacity-100"
+          class="border-2-2 absolute h-full lg:h-3/4 mt-3.5 border-l-[4px] border-[#D9D9D9] border-opacity-100"
           style="left: 50%"
         ></div>
         <!-- right timeline -->
@@ -216,7 +255,7 @@
         >
           <div class="order-1 flex w-5/12 justify-end">
             <h3
-              class="bg-[#3F0189] px-6 py-4 text-lg font-bold text-white shadow-xl"
+              class="bg-[#3F0189] px-6 py-4 text-lg font-normal text-white shadow-xl"
             >
               28 September - 8 Oktober 2022
             </h3>
@@ -225,7 +264,7 @@
             class="z-20 order-1 flex h-8 w-8 items-center rounded-full bg-[#3F0189] shadow-xl"
           ></div>
           <div class="order-1 flex w-5/12 justify-start">
-            <h3 class="text-lg font-bold text-white">
+            <h3 class="text-lg font-normal text-white">
               Registrasi Lomba Batch 1
             </h3>
           </div>
@@ -235,7 +274,7 @@
         >
           <div class="order-1 flex w-5/12 justify-end">
             <h3
-              class="bg-[#3F0189] px-6 py-4 text-lg font-bold text-white shadow-xl"
+              class="bg-[#3F0189] px-6 py-4 text-lg font-normal text-white shadow-xl"
             >
               9 Oktober - 13 Oktober 2022
             </h3>
@@ -244,7 +283,7 @@
             class="z-20 order-1 flex h-8 w-8 items-center rounded-full bg-[#3F0189] shadow-xl"
           ></div>
           <div class="order-1 flex w-5/12 justify-start">
-            <h3 class="text-lg font-bold text-white">
+            <h3 class="text-lg font-normal text-white">
               Pengumpulan Karya Batch 1
             </h3>
           </div>
@@ -254,7 +293,7 @@
         >
           <div class="order-1 flex w-5/12 justify-end">
             <h3
-              class="bg-[#3F0189] px-6 py-4 text-lg font-bold text-white shadow-xl"
+              class="bg-[#3F0189] px-6 py-4 text-lg font-normal text-white shadow-xl"
             >
               9 Oktober - 22 Oktober 2022
             </h3>
@@ -263,7 +302,7 @@
             class="z-20 order-1 flex h-8 w-8 items-center rounded-full bg-[#3F0189] shadow-xl"
           ></div>
           <div class="order-1 flex w-5/12 justify-start">
-            <h3 class="text-lg font-bold text-white">
+            <h3 class="text-lg font-normal text-white">
               Registrasi Lomba Batch 2
             </h3>
           </div>
@@ -272,7 +311,7 @@
           class="right-timeline mb-8 flex w-full items-center justify-between"
         >
           <div class="order-1 flex w-5/12 justify-end">
-            <h3 class="text-lg font-bold text-white">
+            <h3 class="text-lg font-normal text-white">
               Pengumpulan Karya Batch 2
             </h3>
           </div>
@@ -281,7 +320,7 @@
           ></div>
           <div class="order-1 flex w-5/12 justify-start">
             <h3
-              class="bg-[#3F0189] px-6 py-4 text-lg font-bold text-white shadow-xl"
+              class="bg-[#3F0189] px-6 py-4 text-lg font-normal text-white shadow-xl"
             >
               23 Oktober - 2 November 2022
             </h3>
@@ -291,7 +330,7 @@
           class="right-timeline mb-8 flex w-full items-center justify-between"
         >
           <div class="order-1 flex w-5/12 justify-end">
-            <h3 class="text-lg font-bold text-white">
+            <h3 class="text-lg font-normal text-white">
               Open Registrasi Seminar
             </h3>
           </div>
@@ -301,7 +340,7 @@
           ></div>
           <div class="order-1 flex w-5/12 justify-start">
             <h3
-              class="bg-[#3F0189] px-6 py-4 text-lg font-bold text-white shadow-xl"
+              class="bg-[#3F0189] px-6 py-4 text-lg font-normal text-white shadow-xl"
             >
               28 Oktober - 11 November 2022
             </h3>
@@ -311,7 +350,7 @@
           class="right-timeline mb-8 flex w-full items-center justify-between"
         >
           <div class="order-1 flex w-5/12 justify-end">
-            <h3 class="text-lg font-bold text-white">
+            <h3 class="text-lg font-normal text-white">
               Seminar, Awarding, & Puncak Acara
             </h3>
           </div>
@@ -320,7 +359,7 @@
           ></div>
           <div class="order-1 flex w-5/12 justify-start">
             <h3
-              class="bg-[#3F0189] px-6 py-4 text-lg font-bold text-white shadow-xl"
+              class="bg-[#3F0189] px-6 py-4 text-lg font-normal text-white shadow-xl"
             >
               12 November 2022
             </h3>
@@ -330,6 +369,7 @@
     </div>
 
     <!-- script -->
+	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script src="../assets/js/script.js"></script>
   </body>
 </html>
