progress about section

--- a/src/index.html
+++ b/src/index.html
@@ -170,20 +170,22 @@
           <div class="lg:flex lg:basis-7/12 lg:items-center">
             <div class="">
               <h3
-                class="text-center text-xl font-semibold sm:text-2xl md:text-3xl lg:text-4xl"
+                class="mb-1 text-center text-xl font-semibold tracking-wide sm:text-2xl md:text-3xl lg:text-4xl"
               >
-                Bytesfest
+                Bytes<span class="text-primary-75">fest</span>
               </h3>
-              <h5 class="text-neutral-100">
+              <h5
+                class="mb-3 text-center text-xs tracking-normal text-neutral-100"
+              >
                 Bunch of Youth Technottraction and Sport Festival
               </h5>
-              <p class="mb-5 text-sm text-neutral-75">
+              <p class="mb-5 text-sm leading-relaxed text-neutral-75">
                 Bytesfest merupakan event tahunan yang diselenggarakan oleh
                 himpunan Mahasiswa Prodi Pendidikan Teknik Informatika dan
                 Komputer Universitas Sebelas Maret. Bytesfest tahun 2022 yang
                 mengusung tema Akrisma (“Aksi dan Kreasi Muda Indonesia” ).
               </p>
-              <p class="text-sm text-neutral-75">
+              <p class="text-sm leading-relaxed text-neutral-75">
                 Diharapkan dengan diselenggarakan acara ini dapat mengajak
                 generasi muda mengembangkan potensi, minat bakat dan ajang
                 kreatifitas yang mampu membentuk karakter yang berjiwa muda dan
