add content in image competition

--- a/src/index.html
+++ b/src/index.html
@@ -249,19 +249,69 @@
 		</div>
 		<div class="swiper">
 			<div class="swiper-wrapper pb-12">
-			  <div class="swiper-slide w-8" style="width: 66.666667%;">
+			  <div class="swiper-slide w-5/6 md:w-2/3 overflow-hidden">
+				  <div class="absolute p-3.5 top-[20%] left-24">
+					<h1 class="text-5xl font-medium mb-6">Podcast</h1>
+					<p class="font-normal md:max-w-2xl text-justify text-base mb-8">
+						Dengan Tema “How to improve yourself, with your creativity and what you have” Merupakan Kompetisi yang membutuhkan pemikiran yang mendalam dan kritis, kompetisi Podcast bisa diikuti oleh SMA sederajat dan mahasiswa aktif dari seluruh perguruan tinggi, podcast berdurasi minimal 5 menit dan maksimal 10 menit dengan maksimal 3 orang per kelompok.
+					</p>
+					<div class="flex gap-8">
+						<a href="" class="py-4 px-8 bg-primary-400 rounded-xl shadow-xl font-semibold">Guidebook</a>
+						<a href="" class="py-4 px-8 bg-primary-400 rounded-xl shadow-xl font-semibold">Pendaftaran</a>
+					</div>
+				  </div>
 				<img class="w-full" src="/assets/img/lomba-podcast.png" />
 			  </div>
-			  <div class="swiper-slide" style="width: 66.666667%;">
+			  <div class="swiper-slide w-5/6 md:w-2/3 overflow-hidden">
+				<div class="absolute p-3.5 top-[20%] left-24">
+					<h1 class="text-5xl font-medium mb-6">Desain Web</h1>
+					<p class="font-normal md:max-w-2xl text-justify text-base mb-8">
+						Merupakan Kompetisi perancangan tampilan sebuah web statis atau web yang informasi di dalamnya tidak dapat diubah kecuali jika diubah syntax-nya. Tema web yang diusung yaitu “fashion web” lomba ini diikuti oleh SMA sederajat dan mahasiswa yang berstatus aktif dari seluruh perguruan tinggi di Indonesia dengan jumlah maksimal 3 orang per kelompok. 
+					</p>
+					<div class="flex gap-8">
+						<a href="" class="py-4 px-8 bg-primary-400 rounded-xl shadow-xl font-semibold">Guidebook</a>
+						<a href="" class="py-4 px-8 bg-primary-400 rounded-xl shadow-xl font-semibold">Pendaftaran</a>
+					</div>
+				  </div>
 				<img class="w-full" src="/assets/img/lomba-web.png" />
 			  </div>
-			  <div class="swiper-slide" style="width: 66.666667%;">
+			  <div class="swiper-slide w-5/6 md:w-2/3 overflow-hidden">
+				<div class="absolute p-3.5 top-[20%] left-24">
+					<h1 class="text-5xl font-medium mb-6">Fotografi</h1>
+					<p class="font-normal md:max-w-2xl text-justify text-base mb-8">
+						Merupakan kompetisi dalam menyajikan sebuah karya visual berbentuk foto yang bermakna khusus dan informatif. Kompetisi Fotografi bisa diikuti oleh SMA sederajat dan mahasiswa aktif dari seluruh perguruan tinggi ,yang bertemakan “Yang Muda Yang Berkarya”  yang bertujuan agar para generasi muda yang akan menjadi penerus bangsa terekspos dan dapat tercurahkan dalam karya fotografi.
+					</p>
+					<div class="flex gap-8">
+						<a href="" class="py-4 px-8 bg-primary-400 rounded-xl shadow-xl font-semibold">Guidebook</a>
+						<a href="" class="py-4 px-8 bg-primary-400 rounded-xl shadow-xl font-semibold">Pendaftaran</a>
+					</div>
+				  </div>
 				<img class="w-full" src="/assets/img/lomba-fotografi.png" />
 			  </div>
-			  <div class="swiper-slide" style="width: 66.666667%;">
+			  <div class="swiper-slide w-5/6 md:w-2/3 overflow-hidden">
+				<div class="absolute p-3.5 top-[20%] left-24">
+					<h1 class="text-5xl font-medium mb-6">Essai</h1>
+					<p class="font-normal md:max-w-2xl text-justify text-base mb-8">
+						Merupakan kompetisi di bidang kepenulisan yang dapat diikuti oleh SMA sederajat dan mahasiswa yang berstatus aktif dari seluruh perguruan tinggi di Indonesia. Tema yang diangkat adalah “Peran Generasi Muda dalam Pengembangan Teknologi Masa Depan Indonesia”. Lomba ini bertujuan sebagai wadah untuk mengembangkan kreativitas dan kemampuan berpikir kritis.
+					</p>
+					<div class="flex gap-8">
+						<a href="" class="py-4 px-8 bg-primary-400 rounded-xl shadow-xl font-semibold">Guidebook</a>
+						<a href="" class="py-4 px-8 bg-primary-400 rounded-xl shadow-xl font-semibold">Pendaftaran</a>
+					</div>
+				  </div>
 				<img class="w-full" src="/assets/img/lomba-essai.png" />
 			  </div>
-			  <div class="swiper-slide" style="width: 66.666667%;">
+			  <div class="swiper-slide w-5/6 md:w-2/3 overflow-hidden">
+				<div class="absolute p-3.5 top-[20%] left-24">
+					<h1 class="text-5xl font-medium mb-6">Poster</h1>
+					<p class="font-normal md:max-w-2xl text-justify text-base mb-8">
+						merupakan kompetisi yang menyediakan karya visual yang berwarna-warni, yang memudahkan untuk menyuarakan masalah yang terkait dan sesuai untuk ditampilkan di tempat umum. Kompetisi Poster bisa diikuti oleh SMA sederajat dan mahasiswa aktif dari seluruh perguruan tinggi.
+					</p>
+					<div class="flex gap-8">
+						<a href="" class="py-4 px-8 bg-primary-400 rounded-xl shadow-xl font-semibold">Guidebook</a>
+						<a href="" class="py-4 px-8 bg-primary-400 rounded-xl shadow-xl font-semibold">Pendaftaran</a>
+					</div>
+				  </div>
 				<img class="w-full" src="/assets/img/lomba-poster.png" />
 			  </div>
 			</div>
