--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/dist/output.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
-	<style>
-		:root {
-			--swiper-pagination-bullet-inactive-color: #D9D9D9; 
-			--swiper-pagination-bullet-inactive-opacity: 0.9;
-			--swiper-pagination-color: #4D00A9;
-		}
-	</style>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
+    />
+    <style>
+      :root {
+        --swiper-pagination-bullet-inactive-color: #d9d9d9;
+        --swiper-pagination-bullet-inactive-opacity: 0.9;
+        --swiper-pagination-color: #4d00a9;
+      }
+    </style>
   </head>
   <body class="bg-slate-800 font-poppins text-white transition-all">
     <!-- HERO SECTION START -->
@@ -186,6 +189,9 @@
               >
                 Bunch of Youth Technottraction and Sport Festival
               </h5>
+              <div class="mb-5 flex w-full justify-center">
+                <div class="h-[3px] w-16 bg-primary-100"></div>
+              </div>
               <p class="mb-5 text-sm leading-relaxed text-neutral-75">
                 Bytesfest merupakan event tahunan yang diselenggarakan oleh
                 himpunan Mahasiswa Prodi Pendidikan Teknik Informatika dan
@@ -244,43 +250,45 @@
     </div>
     <!-- DANGLE SECTION END -->
 
-	<!-- Slider main container -->
-	<div class="bg-[#1b1b1b]">
-		<div class="py-36 text-center">
-			<h1 href="" class="text-5xl font-semibold text-shadow-hero-sm">Bytesfest Competition 2022</h1>
-		</div>
-		<div class="swiper">
-			<div class="swiper-wrapper pb-12">
-			  <div class="swiper-slide w-8" style="width: 66.666667%;">
-				<img class="w-full" src="/assets/img/lomba-podcast.png" />
-			  </div>
-			  <div class="swiper-slide" style="width: 66.666667%;">
-				<img class="w-full" src="/assets/img/lomba-web.png" />
-			  </div>
-			  <div class="swiper-slide" style="width: 66.666667%;">
-				<img class="w-full" src="/assets/img/lomba-fotografi.png" />
-			  </div>
-			  <div class="swiper-slide" style="width: 66.666667%;">
-				<img class="w-full" src="/assets/img/lomba-essai.png" />
-			  </div>
-			  <div class="swiper-slide" style="width: 66.666667%;">
-				<img class="w-full" src="/assets/img/lomba-poster.png" />
-			  </div>
-			</div>
-			<div class="swiper-pagination"></div>
-		  </div>
-
-		
-	</div>
+    <!-- Slider main container -->
+    <div class="bg-[#1b1b1b]">
+      <div class="py-36 text-center">
+        <h1 href="" class="text-shadow-hero-sm text-5xl font-semibold">
+          Bytesfest Competition 2022
+        </h1>
+      </div>
+      <div class="swiper">
+        <div class="swiper-wrapper pb-12">
+          <div class="swiper-slide w-8" style="width: 66.666667%">
+            <img class="w-full" src="/assets/img/lomba-podcast.png" />
+          </div>
+          <div class="swiper-slide" style="width: 66.666667%">
+            <img class="w-full" src="/assets/img/lomba-web.png" />
+          </div>
+          <div class="swiper-slide" style="width: 66.666667%">
+            <img class="w-full" src="/assets/img/lomba-fotografi.png" />
+          </div>
+          <div class="swiper-slide" style="width: 66.666667%">
+            <img class="w-full" src="/assets/img/lomba-essai.png" />
+          </div>
+          <div class="swiper-slide" style="width: 66.666667%">
+            <img class="w-full" src="/assets/img/lomba-poster.png" />
+          </div>
+        </div>
+        <div class="swiper-pagination"></div>
+      </div>
+    </div>
 
     <!-- component -->
     <div class="mx-auto h-full w-full bg-[#1b1b1b]">
-		<div class="pt-36 pb-12 text-center">
-			<h1 href="" class="text-5xl font-semibold text-shadow-hero-sm">Timeline Bytesfest</h1>
-		</div>
+      <div class="pt-36 pb-12 text-center">
+        <h1 href="" class="text-shadow-hero-sm text-5xl font-semibold">
+          Timeline Bytesfest
+        </h1>
+      </div>
       <div class="wrap relative h-full overflow-hidden p-10">
         <div
-          class="border-2-2 absolute h-full lg:h-3/4 mt-3.5 border-l-[4px] border-[#D9D9D9] border-opacity-100"
+          class="border-2-2 absolute mt-3.5 h-full border-l-[4px] border-[#D9D9D9] border-opacity-100 lg:h-3/4"
           style="left: 50%"
         ></div>
         <!-- right timeline -->
@@ -403,7 +411,7 @@
     </div>
 
     <!-- script -->
-	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script src="../assets/js/script.js"></script>
   </body>
 </html>
