progress dangle section

--- a/src/index.html
+++ b/src/index.html
@@ -160,7 +160,7 @@
     <!-- HERO SECTION END -->
 
     <!-- ABOUT SECTION START -->
-    <div id="about" class="bg-neutral-800 py-32">
+    <div id="about" class="bg-neutral-900 py-32">
       <!-- container -->
       <div class="mx-auto px-5 lg:w-[1200px] lg:px-0">
         <div class="flex w-full flex-col lg:flex-row">
@@ -178,33 +178,40 @@
           </div>
 
           <div class="lg:flex lg:basis-7/12 lg:items-center">
-            <div class="">
+            <!-- text-container -->
+            <div class="sm:px-10 md:px-16">
               <h3
-                class="mb-1 text-center text-xl font-semibold tracking-wide sm:text-2xl md:text-3xl lg:text-4xl"
+                class="mb-1 text-center text-xl font-semibold tracking-wide sm:text-left sm:text-2xl md:text-3xl lg:text-4xl"
               >
                 Bytes<span class="text-primary-75">fest</span>
               </h3>
               <h5
-                class="mb-3 text-center text-xs tracking-normal text-neutral-100"
+                class="mb-3 text-center text-xs tracking-normal text-neutral-100 sm:text-left sm:text-sm md:mb-4 md:text-base"
               >
                 Bunch of Youth Technottraction and Sport Festival
               </h5>
-              <div class="mb-5 flex w-full justify-center">
+              <div class="mb-5 flex w-full justify-center sm:justify-start">
                 <div class="h-[3px] w-16 bg-primary-100"></div>
               </div>
-              <p class="mb-5 text-sm leading-relaxed text-neutral-75">
-                Bytesfest merupakan event tahunan yang diselenggarakan oleh
-                himpunan Mahasiswa Prodi Pendidikan Teknik Informatika dan
-                Komputer Universitas Sebelas Maret. Bytesfest tahun 2022 yang
-                mengusung tema Akrisma (“Aksi dan Kreasi Muda Indonesia” ).
-              </p>
-              <p class="text-sm leading-relaxed text-neutral-75">
-                Diharapkan dengan diselenggarakan acara ini dapat mengajak
-                generasi muda mengembangkan potensi, minat bakat dan ajang
-                kreatifitas yang mampu membentuk karakter yang berjiwa muda dan
-                mampu mengembangkan potensi kreativitas dan inovasi melalui
-                apapun yang mereka punya.
-              </p>
+              <div class="">
+                <p
+                  class="mb-5 text-sm leading-relaxed text-neutral-50 md:leading-loose"
+                >
+                  Bytesfest merupakan event tahunan yang diselenggarakan oleh
+                  himpunan Mahasiswa Prodi Pendidikan Teknik Informatika dan
+                  Komputer Universitas Sebelas Maret. Bytesfest tahun 2022 yang
+                  mengusung tema Akrisma (“Aksi dan Kreasi Muda Indonesia” ).
+                </p>
+                <p
+                  class="text-sm leading-relaxed text-neutral-50 md:leading-loose"
+                >
+                  Diharapkan dengan diselenggarakan acara ini dapat mengajak
+                  generasi muda mengembangkan potensi, minat bakat dan ajang
+                  kreatifitas yang mampu membentuk karakter yang berjiwa muda
+                  dan mampu mengembangkan potensi kreativitas dan inovasi
+                  melalui apapun yang mereka punya.
+                </p>
+              </div>
             </div>
           </div>
         </div>
@@ -213,36 +220,57 @@
     <!-- ABOUT SECTION END -->
 
     <!-- DANGLE SECTION START -->
-    <div class="bg-slate-700 py-32">
+    <div id="about" class="bg-primary-700 py-32">
       <!-- container -->
       <div class="mx-auto px-5 lg:w-[1200px] lg:px-0">
-        <div class="flex w-full flex-col bg-slate-400 lg:flex-row-reverse">
+        <div class="flex w-full flex-col lg:flex-row-reverse">
           <div class="mb-8 flex justify-center lg:mb-0 lg:basis-5/12">
             <!-- bytesfest-logo -->
             <div
-              class="h-40 w-32 bg-slate-600 sm:h-52 sm:w-44 md:h-64 md:w-52 lg:h-96 lg:w-72"
-            ></div>
+              class="flex h-40 w-32 justify-center sm:h-52 sm:w-44 md:h-64 md:w-52 lg:h-96 lg:w-72"
+            >
+              <img
+                src="/assets/img/mascot-main.png"
+                alt="bytesfest about"
+                class="object-contain"
+              />
+            </div>
           </div>
 
           <div class="lg:flex lg:basis-7/12 lg:items-center">
-            <div class="bg-slate-600">
+            <!-- text-container -->
+            <div class="sm:px-10 md:px-16">
               <h3
-                class="mb-5 text-xl font-semibold sm:text-2xl md:text-3xl lg:text-4xl"
+                class="mb-1 text-center text-xl font-semibold tracking-wide sm:text-left sm:text-2xl md:text-3xl lg:text-4xl"
               >
                 Dangle
               </h3>
-              <h2 class="mb-5 font-medium sm:text-xl md:text-2xl">
-                Filosofi Atribut
-              </h2>
-              <p class="mb-5 sm:text-lg">
-                Mahkota Dangle melambangkan kejayaan dan kemakmuran dari acara
-                Bytesfest yang rutin diadakan setiap tahunnya, kacamatanya
-                membuat bytesfest terkesan modern karena mengikuti perkembangan
-                peradaban yang serba modern tanpa meninggalkan keahlian yang
-                ditempatkan dengan tepat. Baju saman Dangle memberi makna seni
-                yang melekat dan melestarikan jiwa seni. Truntum mampu untuk
-                tumbuh dan berkembang mengikuti perubahan seni dan teknologi.
-              </p>
+              <h5
+                class="mb-3 text-center text-xs tracking-normal text-neutral-100 sm:text-left sm:text-sm md:mb-4 md:text-base"
+              >
+                Filosofi mascot
+              </h5>
+              <div class="mb-5 flex w-full justify-center sm:justify-start">
+                <div class="h-[3px] w-16 bg-primary-100"></div>
+              </div>
+              <div class="">
+                <p
+                  class="mb-5 text-sm leading-relaxed text-neutral-50 md:leading-loose"
+                >
+                  Mahkota Dangle melambangkan kejayaan dan kemakmuran dari acara
+                  Bytesfest yang rutin diadakan setiap tahunnya, kacamatanya
+                  membuat bytesfest terkesan modern karena mengikuti
+                  perkembangan peradaban yang serba modern tanpa meninggalkan
+                  keahlian yang ditempatkan dengan tepat.
+                </p>
+                <p
+                  class="text-sm leading-relaxed text-neutral-50 md:leading-loose"
+                >
+                  Baju saman Dangle memberi makna seni yang melekat dan
+                  melestarikan jiwa seni. Truntum mampu untuk tumbuh dan
+                  berkembang mengikuti perubahan seni dan teknologi.
+                </p>
+              </div>
             </div>
           </div>
         </div>
